# stock-analyzer

./: .env.example  .gitignore  CHANGES.md  CLAUDE.md  FEATURE_CHANGES.md  README.md  backtest.py  backtest_gates.py  backtest_gates_results.json  backtest_results.json  drizzle.config.ts  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.claude/: settings.json
client/: index.html
docs/: ARCHITECTURE.md  AUDIT-2026-06-09.md  BACKUP.md  DASHBOARD_PLAN.md  FMP_API_DOCS_RAW.md  FMP_REFERENCE.md  MASTER_PATHWAY.md  PRODUCTION-READINESS-PLAN.md  REVIEW-expectancy-layer.md  RULES.md  TODO.md  uptime-monitoring.md
python/: README.md
python/hermes/: Dockerfile  Dockerfile.bot  dashboard.py  dashboard_web.py  export_csv.py  pyproject.toml
python/hermes/hermes_trading/: __init__.py  alerts.py  loop.py  reflect.py  run.py  score.py  volatility.py
python/hermes/hermes_trading/adapters/: __init__.py  macro.py  news.py  onchain.py  price.py
python/kairos/: .env.example  Dockerfile  Dockerfile.bot  README.md  dashboard_web.py  docker-compose.yml  pyproject.toml
python/kairos/kairos_trading/: __init__.py  loop.py  run.py
python/kairos/kairos_trading/adapters/: price.py  watchlist.py
python/kairos/kairos_trading/strategies/: bbtc.py  htf.py
python/kairos/state/: goal.yaml
python/kairos/tests/: conftest.py  test_bbtc_parity.py  test_htf_parity.py  test_synthetic_setups.py
python/kairos/tests/baseline/: bbtc_baseline.json  htf_baseline.json
script/: build.mjs  build.ts
scripts/: amc-parity.ts  backup.sh  bbtc-parity.ts  restore.sh  (+24 more)
(+439 files in other folders)
