[project]
name = "hermes-trading"
version = "0.1.0"
description = "Self-improving trading agent"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "yfinance>=0.2.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
